Maverick Synergy 3.0.5 - TBC

Bug Fixes
    o If PasswordAuthenticator is passed to SshClient.authenticate it should be translated into keyboard-interactive if the remote server only supports keyboard-interactive regardless of context preference to support password over keyboard-interactive.
    o PasswordOverKeyboardInteractiveCallback should defer obtaining password until authentication is being performed.
    o Loading a license from file was broken.
    
=================
=  HISTORY      =
=================

Maverick Synergy 3.0.4 - Aug 18, 2021

Features
    o Refactor of callback client; separated CallbackContextFactory and added SshConnection parameter to event methods.
    o Added before/after methods to Utils.
    o Create an SshClient from an existing SshConnection to allow wrapping of "jump" hosts.
    o Added CallbackRegistrationService for management of callback clients within a callback server.
    
Bug Fixes
    o Missing server-level collection of GlobalRequestHandlers.
    o Changed use of VFS SFTP 3.2.0 from snapshot to final version.
    o Made SwitchingCallbackContext constructor public.
    o Don't print stack trace of unsupported command, just log the error.
    o Allow protected access to child channel factories of ShellCommandFactory.
    o Allow protected access to console and ShellCommandFactory of VirtualShellNG session implementation.
    o Default callback identifier made consistent with SSH identification practices. 
    o Authentication future is not processed as part of client disconnect.
    o BouncyCastle 1.69 cannot load ED25519 key.
    o ClientAuthenticator should allow SshException to propagate. 
    o NPE when no license is set.
    o Client authenticators need to signal failure of the authenticator to their parent future.
    
-----------------

Maverick Synergy 3.0.3-FINAL - Jul 21, 2021

Bug Fixes
    o Configure default connection timeout value of 600 seconds and ensure zero value is treated as no timeout.